[gd_scene load_steps=3 format=3 uid="uid://crrpbgk3u52jj"]

[ext_resource type="Script" uid="uid://cc1opl4cgau31" path="res://minigames/FryTheMeat/progress_marker.gd" id="1_8lxah"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3lvgc"]
size = Vector2(20, 130)

[node name="ProgressMarker" type="Area2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource("1_8lxah")

[node name="GraphicalMarker" type="Line2D" parent="."]
position = Vector2(0, -1)
points = PackedVector2Array(0, -64, 0, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_3lvgc")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
